--- a/css/main.css
+++ b/css/main.css
@@ -5,53 +5,11 @@ body {
   margin: 0;
 }
 
-#selector {
-  height: 50px;
-  width: 100vw;
-  border-bottom: 1px solid gray;
-  padding-top: 25px;
-  padding-left: 50px;
-}
-
 #cat {
   padding-top: 25px;
   padding-left: 50px;
 }
 
-.catButton {
-  width: 100px;
-  text-align: center;
-  margin-right: 25px;
-}
-
-#adminMode {
-  padding-top: 25px;
-  padding-left: 50px;
-}
-
-#admin {
-  float: left;
-}
-
-form {
-  float: left;
-  margin-left: 50px;
-  display: none;
-}
-
-label {
-  width: 150px;
-  display: inline-block;
-}
-
-.catValues {
-  width: 300px;
-  display: inline-block;
-  margin-bottom: 5px;
-}
-
-#cancel, #submit {
-  float: right;
-  margin-top: 15px;
-  margin-left: 10px;
+#name, #clicks, #catLevel, #catPic {
+  margin-bottom: 20px;
 }
